# akku

./: .cirrus.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  Akku.manifest  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile.am  NEWS.md  README.md  akku-archive-2018.gpg  bootstrap  bootstrap.db  config.scm.in  config.sls  configure.ac  guile-deps.txt  guile-script-header.in  pre-commit-refresh  pre-inst-env.in  run-tests.sh
.akku/: env
.akku/lib/: packrat.sls  pffi.sls
.akku/lib/akku/: config.sls  metadata.sls
.akku/lib/akku-r7rs/: base.sls
.akku/lib/akku/format/: lockfile.sls  manifest.sls
.akku/lib/akku/lib/: archive-maint.sls  bundle.sls  compat.chezscheme.sls  compat.guile.sls  fetch.sls  file-parser.sls  git.sls  graph.sls  init.sls  install.sls  library-name.sls  lock.sls  manifest.sls  publish.sls  r7rs.sls  repo-scanner.sls  scan.sls  schemedb.sls  scripts.sls  solver.sls  update.sls  utils.sls
.akku/lib/akku/private/: compat.chezscheme.sls  compat.guile.sls  compat.loko.sls  http.loko.sls  http.sls  logging.sls  utils.sls
.akku/lib/chibi/: match.guile.sls  match.sls
.akku/lib/compression/: bitstream.sls  gzip.sls  huffman.sls  inflate.sls  lzma.sls  lzma2.sls  sliding-buffer.sls  tar.sls  xz.sls
.akku/lib/compression/private/: common.sls  compat.sls
.akku/lib/hashing/: crc.sls  fixnums.sls  hmac.sls  md5.sls  sha-1.sls  sha-2.sls
.akku/lib/hashing/private/: common.sls  compat.sls
.akku/lib/industria/: base64.sls  bit-strings.sls  bytevectors.sls  der.sls  openpgp.sls  strings.sls
.akku/lib/industria/crypto/: dsa.sls  entropy.sls  math.sls  rsa.sls
.akku/lib/laesare/: reader.sls  writer.sls
.akku/lib/packrat/: portable-packrat.scm
.akku/lib/pffi/: bv-pointer.chezscheme.sls  compat.chezscheme.sls  compat.guile.sls  misc.chezscheme.sls  misc.sls  pointers.sls  procedure.sls  struct.sls  variable.sls
.akku/lib/semver/: ranges.sls  versions.sls
.akku/lib/semver/compat/: match.guile.sls  match.sls
.akku/lib/spdx/: ids.sls  parser.sls
.akku/lib/spells/: alist.sls  define-values.chezscheme.sls  define-values.sls  delimited-readers.sls  error.sls  filesys.sls  gc.sls  hash-utils.sls  include.sls  logging.sls  match.sls  misc.sls  operations.sls  opt-args.sls  pathname.sls  ports.sls  procedure-annotations.sls  process.sls  record-types.sls  string-utils.sls  syntax-utils.sls  time-lib.sls  tracing.sls  xvector.sls
.akku/lib/spells/filesys/: compat.chezscheme.sls  compat.guile.sls  compat.loko.sls
.akku/lib/spells/gc/: compat.chezscheme.sls  compat.guile.sls  compat.loko.sls
.akku/lib/spells/include/: compat.sls  helpers.sls
.akku/lib/spells/misc/: compat.chezscheme.sls  compat.guile.sls  compat.loko.sls
.akku/lib/spells/pathname/: os-string.sls
.akku/lib/spells/process/: compat.chezscheme.sls  compat.guile.sls  compat.loko.sls
.akku/lib/spells/record-types/: expand-drt.sls
.akku/lib/spells/tracing/: compat.sls
.akku/lib/srfi/: :1.sls  :13.sls  :27.chezscheme.sls  srfi-1.guile.sls  srfi-115.guile.sls  srfi-14.guile.sls  srfi-2.guile.sls  srfi-23.guile.sls  srfi-27.guile.sls  srfi-45.guile.sls  srfi-67.guile.sls  srfi-9.guile.sls
.akku/lib/srfi/:1/: lists.chezscheme.sls  lists.sls
.akku/lib/srfi/:115/: boundary.sls  regexp.chezscheme.sls  regexp.sls
.akku/lib/srfi/:13/: strings.chezscheme.sls
.akku/lib/srfi/:14/: char-sets.sls
.akku/lib/srfi/:19/: time.sls
.akku/lib/srfi/:2/: and-let*.sls
.akku/lib/srfi/:23/: error.chezscheme.sls
.akku/lib/srfi/:26/: cut.chezscheme.sls  cut.sls
.akku/lib/srfi/:27/: random-bits.chezscheme.sls
.akku/lib/srfi/:39/: parameters.chezscheme.sls  parameters.sls
.akku/lib/srfi/:43/: vectors.chezscheme.sls
.akku/lib/srfi/:45/: lazy.chezscheme.sls
.akku/lib/srfi/:6/: basic-string-ports.chezscheme.sls
.akku/lib/srfi/:8/: receive.sls
.akku/lib/struct/: pack.sls
.akku/lib/wak/: fmt.sls  foof-loop.sls  riastreams.sls  syn-param.sls  wt-tree.sls
.akku/lib/xitomatl/: AS-match.sls  alists.sls  common.chezscheme.sls  common.guile.sls  conditionals.sls  conditions.sls  define.sls  exceptions.sls  macro-utils.sls  predicates.sls  records.sls
compat/: spells-filesys-compat.loko.sls  spells-process-compat.loko.sls  wak-private-include-compat.loko.sls
docker/: dockerfile-chezscheme  dockerfile-chibi  dockerfile-digamma  dockerfile-guile  dockerfile-guile3  dockerfile-ikarus  dockerfile-ironscheme-dotnet  dockerfile-larceny  dockerfile-loko  dockerfile-mosh  dockerfile-racket  dockerfile-sagittarius  dockerfile-vicare  dockerfile-ypsilon
docs/: akku.1
format/: lockfile.scm  manifest.scm
lib/: archive-maint.scm  bundle.scm  compat.chezscheme.sls  compat.guile.sls  fetch.scm  file-parser.scm  git.scm  graph.scm  init.scm  install.scm  library-name.scm  lock.scm  manifest.scm  publish.scm  r7rs.scm  repo-scanner.scm  scan.scm  schemedb.scm  scripts.scm  solver.sls  update.scm  utils.scm
lib/solver/: logging.sls
private/: build.chezscheme.sps  compat.chezscheme.sls  compat.guile.sls  compat.loko.sls  http.loko.sls  http.scm  install-src.sh  logging.sls  match.guile.sls  r6rs-guile.scm  utils.sls
tests/: solver.scm  test-init.sh  test-library-name.sps  test-lockfile1.sh  test-lockfile2.sh  test-r7rs.sps  test-utils.sps
(+46 files in other folders)
